--- a/index.html
+++ b/index.html
@@ -11,18 +11,21 @@
       href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Oleo+Script&family=Roboto+Slab:wght@400;700&family=Roboto:ital,wght@0,400;1,700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" href="/styles/styles.css" />
+    <link rel="stylesheet" href="/styles/overlays.css" />
+    <link rel="stylesheet" href="/styles/configuration.css" />
   </head>
   <body>
+    <div id="backdrop"></div>
     <header id="main-header">
       <h1>Play Tic-Tac-Toe</h1>
       <p>Built with HTML, CSS and JavaScript</p>
     </header>
     <main>
-      <aside>
+      <aside class="modal" id="config-overlay">
         <h2>Choose you name</h2>
         <form>
-          <div>
+          <div class="form-control">
             <label for="playername">Player Name</label>
             <input type="text" name="playername" id="playername" />
           </div>
@@ -38,7 +41,7 @@
             <article>
               <h2>Player 1</h2>
               <h3>PLAYER NAME</h3>
-              <p>X</p>
+              <p class="player-symbol">X</p>
               <button class="btn btn-alt">Edit</button>
             </article>
           </li>
@@ -46,7 +49,7 @@
             <article>
               <h2>Player 2</h2>
               <h3>PLAYER NAME</h3>
-              <p>O</p>
+              <p class="player-symbol">O</p>
               <button class="btn btn-alt">Edit</button>
             </article>
           </li>
