--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/styles/styles.css" />
     <link rel="stylesheet" href="/styles/overlays.css" />
     <link rel="stylesheet" href="/styles/configuration.css" />
-    <link rel="stylesheet" href="/styles/game.css">
+    <link rel="stylesheet" href="/styles/game.css" />
     <script src="/scripts/config.js" defer></script>
     <script src="/scripts/game.js" defer></script>
     <script src="/scripts/app.js" defer></script>
@@ -29,14 +29,16 @@
       <aside class="modal" id="config-overlay">
         <h2>Choose you name</h2>
 
-        <form >
+        <form>
           <div class="form-control">
             <label for="playername">Player Name</label>
             <input type="text" name="playername" id="playername" />
           </div>
           <p id="config-errors"></p>
           <div>
-            <button type="reset" class="btn btn-alt" id="cancel-config-btn">Cancel</button>
+            <button type="reset" class="btn btn-alt" id="cancel-config-btn">
+              Cancel
+            </button>
             <button type="submit" class="btn">Confirm</button>
           </div>
         </form>
@@ -48,7 +50,13 @@
               <h2>Player 1</h2>
               <h3>PLAYER NAME</h3>
               <p class="player-symbol">X</p>
-              <button class="btn btn-alt" id="edit-player-1-btn" data-playerid="1">Edit</button>
+              <button
+                class="btn btn-alt"
+                id="edit-player-1-btn"
+                data-playerid="1"
+              >
+                Edit
+              </button>
             </article>
           </li>
           <li>
@@ -56,11 +64,17 @@
               <h2>Player 2</h2>
               <h3>PLAYER NAME</h3>
               <p class="player-symbol">O</p>
-              <button class="btn btn-alt" id="edit-player-2-btn" data-playerid="2">Edit</button>
+              <button
+                class="btn btn-alt"
+                id="edit-player-2-btn"
+                data-playerid="2"
+              >
+                Edit
+              </button>
             </article>
           </li>
         </ol>
-        <button class="btn">Start New Game</button>
+        <button class="btn" id="start-game-btn">Start New Game</button>
       </section>
       <section id="active-game">
         <article id="game-over">
@@ -70,16 +84,16 @@
 
         <p>It's your turn <span id="active-player-name">Player Name</span>!</p>
         <ol id="game-board">
-          <li class="disabled">X</li>
+          <li></li>
           <li></li>
           <li></li>
 
-          <li class="disabled">O</li>
           <li></li>
-          <li class="disabled">X</li>
+          <li></li>
+          <li></li>
 
           <li></li>
-          <li class="disabled">X</li>
+          <li></li>
           <li></li>
         </ol>
       </section>
